--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "axios": "^0.21.1",
     "cloudinary": "^1.26.1",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^4.4.1",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.1.0",
     "express-session": "^1.17.2",
+    "helmet": "^4.6.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.13.1",
     "multer": "^1.4.2",
