--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
     "npm-run-all": "^4.1.5",
+    "passport": "^0.4.1",
+    "passport-local-mongoose": "^6.1.0",
     "run-p": "^0.0.0"
   },
   "devDependencies": {
